# sherlocode

./: .gitignore  .ocamlformat  README.md  dune-project  sherlocode.opam
db/: db.ml  db.mli  dune  int_set.ml  int_set.mli
index/: dune  index.ml  syntax.ml  syntax.mli
regex/: ast.ml  dune  lexer.mll  parser.mly  regex.ml  regex.mli  trie.ml  trie.mli
scripts/: index.sh
static/: style.css  urls.tsv
www/: colorize.ml  dune  link.ml  link.mli  present.ml  search.ml  ui.ml  www.ml
